# cashflow

./: .flake8  README.md  noxfile.py  pyproject.toml  q
.github/.workflows/: tests.yml
.github/workflows/: tests.yml
cashflow/: __init__.py  timeline.py  transaction.py
cashflow/models/: flow.py  transaction.py
cashflow/templates/: base.html  flow.html  flow_transaction.html  landing.html  timeline.html  transaction.html
cashflow/views/: flow.py  landing.py  timeline.py  transaction.py
tests/: __init__.py  conftest.py  test_factory.py  test_timeline.py  test_transaction.py
