[tool.poetry]
name = "cashflow"
version = "0.1.0"
description = "See where your money is going and where it will be"
license = "MIT"
authors = ["Sam Potter <spotter1642@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/stpotter16/cashflow"
repository = "https://github.com/stpotter16/cashflow"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = {version = "^7.2.7", extras = ["toml"]}
pytest-cov = "^4.1.0"
black = "^23.3.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.6.5"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["cashflow", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cashflow"]

[tool.coverage.report]
show_missing = true
